--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -362,12 +362,12 @@ color: #ffffff;
   }
   .input-container button {
     padding: 10px;
-    margin-left: -15.2vw;
+    margin-left: -15.6vw;
     margin-top: 0.6vh;
     margin-bottom: 0;
     font-size: 1.2rem;
     width: 15vw;
-    height: 9.5vh;
+    height: 9.2vh;
     border-radius: 17.4rem;
   }
    .tcs {
@@ -377,7 +377,7 @@ color: #ffffff;
    }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 800px) {
   .landing {
     background-size: cover;
     background-image: url(https://live.staticflickr.com/65535/53097601747_ad931ab6ce_h.jpg);
@@ -470,12 +470,12 @@ color: #ffffff;
   }
   .input-container button {
     padding: 10px;
-    margin-left: -15.4vw;
-    margin-top: 0.7vh;
+    margin-left: -15.6vw;
+    margin-top: 0.6vh;
     margin-bottom: 0;
     font-size: 0.8rem;
     width: 15vw;
-    height: 7vh;
+    height: 6.7vh;
     border-radius: 17.4rem;
   }
    .tcs {
@@ -519,9 +519,14 @@ color: #ffffff;
     margin-bottom: 2vh;
   }
 
+  
+  .landingInfo h2 {
+    font-size: 1.2rem;
+  }
+
   .landingButton {
     height: 8vh;
-    width: 70%;
+    width: 90%;
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -551,7 +556,7 @@ color: #ffffff;
 .landingSub4Para {
   text-align: center;
   font-size: 1.2rem;
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 1rem;
   color: var(--background-offwhite);
   text-align: center;
@@ -559,7 +564,7 @@ color: #ffffff;
 
 
 .input-container input[type="text"] {
-  width: 65vw;
+  width: 70vw;
   height: 5.5vh;
   border-radius: 35.4rem;
   font-size: 1rem;
@@ -567,12 +572,12 @@ color: #ffffff;
 }
 .input-container button {
   padding: 10px;
-  margin-left: -16vw;
+  margin-left: -19vw;
   margin-top: 0.6vh;
   margin-bottom: 0;
   font-size: 0.8rem;
-  width: 15vw;
-  height: 7vh;
+  width: 18vw;
+  height: 6.4vh;
   border-radius: 17.4rem;
 }
  .tcs {
