--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 120vh;
+    height: 150vh;
     width: 100vw;
     padding: 0;
     margin: 0;
@@ -11,7 +11,20 @@
     background-color: var(--accent-blue);
    
 }
+#contactForm h1 {
+font-size: 4.5rem;
+width: 35vw;
+text-align: center;
+  
+}
 
+#contactForm p {
+    font-size: 1.5rem;
+    width: 35vw;
+    text-align: center;
+    margin-bottom: 5vh;
+
+}
 #contactForm {
     display: flex;
     flex-direction: column;
@@ -26,6 +39,7 @@
 .conactcontent {
     height:100vh;
     width: 100%;
+    margin-top: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,14 +54,15 @@
     margin: 0;
     padding: 0;
     width: 100vw;
-    background-color: var(--accent-blue);
    
 }
 .contactformgroup input {
-    height:7vh;
-    width: 40vw;
+    height:4vh;
+    width: 35vw;
     border-radius: 3.4rem;
     font-size: 1.5rem;
+    padding: 2rem;
+    background-color: var(--background-offwhite);
 
 }
 .contacttextarea {
@@ -57,8 +72,8 @@
     align-items: center;
     margin: 0;
     margin-bottom: 2vh;
-    padding: 0;
-    width: 40vw;
+    padding: 2rem;
+    width: 35vw;
     height: 30vh;
     border-radius: 3.4rem;
     border: none;
@@ -67,6 +82,27 @@
    
 }
 
+.contactformgroupbutton button {
+    height: 7vh;
+    width: 15vw;
+    border-radius: 3.4rem;
+    font-size: 1.5rem;
+    background-color: var(--header-main);
+    color: var(--background-offwhite);
+    border: none;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+.contactformgroupbutton{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin: 0;
+    padding: 0;
+    width: 35vw;
+   
+}
 .contacttextarea.focus {
     border: none;
 }
