--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -83,15 +83,21 @@ text-align: center;
 }
 
 .contactformgroupbutton button {
-    height: 7vh;
+    height: 10vh;
     width: 15vw;
     border-radius: 3.4rem;
     font-size: 1.5rem;
+    font-weight: 600;
     background-color: var(--header-main);
     color: var(--background-offwhite);
     border: none;
     margin-top: 2vh;
     margin-bottom: 2vh;
+}
+.contactformgroupbutton button:hover {
+    background-color: transparent;
+    color: var(--header-main);
+    border: 4px solid var(--header-main);
 }
 .contactformgroupbutton{
     display: flex;
@@ -109,4 +115,49 @@ text-align: center;
 
 input:focus, textarea:focus, select:focus{
     outline: 4px solid var(--header-main);
+}
+
+@media screen and (max-width: 750px) {
+
+    #contactForm {
+    
+        width: 100%;
+
+    }
+    #contactForm h1 {
+        font-size: 3.5rem;
+        width: 60vw;
+
+          
+        }
+        
+        #contactForm p {
+            font-size: 1.5rem;
+            width: 60vw;
+            text-align: center;
+            margin-bottom: 5vh;
+        
+        }
+
+        .contactformgroup input {
+            height:4vh;
+            width: 70vw;
+            font-size: 1.5rem;
+
+        
+        }
+        .contacttextarea {
+            
+            width: 70vw;
+       
+           
+        }
+        
+.contactformgroupbutton button {
+    width:50vw;
+
+}
+.contactformgroupbutton {
+    width: 75vw;
+}
 }
