--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -116,7 +116,51 @@ text-align: center;
 input:focus, textarea:focus, select:focus{
     outline: 4px solid var(--header-main);
 }
+@media screen and (max-width: 1500px) {
 
+    #contactForm {
+    
+        width: 80%;
+
+    }
+    #contactForm h1 {
+        font-size: 4rem;
+        width: 50vw;
+        margin-bottom: 0;
+
+          
+        }
+        
+        #contactForm p {
+            font-size: 2rem;
+            width: 60vw;
+            text-align: center;
+            margin-bottom: 5vh;
+        
+        }
+
+        .contactformgroup input {
+            height:4vh;
+            width: 60vw;
+            font-size: 1.5rem;
+
+        
+        }
+        .contacttextarea {
+            
+            width: 60vw;
+       
+           
+        }
+        
+.contactformgroupbutton button {
+    width:50vw;
+
+}
+.contactformgroupbutton {
+    width: 75vw;
+}
+}
 @media screen and (max-width: 750px) {
 
     #contactForm {
@@ -160,4 +204,19 @@ input:focus, textarea:focus, select:focus{
 .contactformgroupbutton {
     width: 75vw;
 }
+}
+
+@media screen and (max-width: 500px) {
+
+
+    #contactForm h1 {
+        font-size: 3.5rem;
+        width: 80vw;
+
+          
+        }
+        #contactForm p {
+            width: 80vw;
+        
+        }
 }
