--- a/src/pages/Hamburger.tsx/Hamburger.css
+++ b/src/pages/Hamburger.tsx/Hamburger.css
@@ -20,7 +20,13 @@
     height: 5vh;
     
   }
+  @media screen and (max-width: 750px){
 
+  .menu img {
+    height: 4vh;
+    
+  }
+}
   
   @media screen and (max-width: 500px)
   {
