--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -250,21 +250,23 @@ color: #ffffff;
   background-color: var(--main-blue); /* Change this to your desired button style */
   color: #fff;
   padding: 10px;
-  margin-left: -10.3vw;
+  margin-left: -12.3vw;
   margin-top: 0.6vh;
   font-size: 1.1rem;
   font-weight: 600;
-  width: 10vw;
+  width: 12vw;
   height: 8.2vh;
   border: none;
   cursor: pointer;
   border-radius: 17.4rem;
+  border: 0;
 }
 
 .input-container button:hover {
   background-color: var(--background-offwhite);
   color: var(--main-blue);
-  border: 4px solid var(--main-blue);
+  border: 5px solid var(--main-blue);
+  cursor: pointer;
 }
 
 /* Landing Info Heading Styles */
@@ -310,7 +312,7 @@ color: #ffffff;
 .landingButton:hover {
   background-color: var(--header-main-hover);
   color: var(--header-main);
-  border: 4px solid var(--header-main);
+  border: 5px solid var(--header-main);
   cursor: pointer;
 }
 
@@ -362,11 +364,11 @@ color: #ffffff;
   }
   .input-container button {
     padding: 10px;
-    margin-left: -15.6vw;
+    margin-left: -18.6vw;
     margin-top: 0.6vh;
     margin-bottom: 0;
     font-size: 1.2rem;
-    width: 15vw;
+    width: 18vw;
     height: 9.2vh;
     border-radius: 17.4rem;
   }
