--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -94,12 +94,9 @@
     height: 7vh;
     width: 15vw;
     margin: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     background-color: var(--main-blue);
     color: #ffffff;
+    border: none;
     font-weight: 700;
     border-radius: 17.4rem;
     border: 0;
@@ -107,7 +104,7 @@
   .submit-button button:hover {
     background-color: transparent;
     color: var( --main-blue);
-    border: 4px solid var( --main-blue);
+    border: 5px solid var( --main-blue);
     cursor: pointer;
 }
 
