--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -40,7 +40,7 @@
     .getStarted h1 {
         color: #242424;
         font-size: 5.2rem;
-        font-weight: 500;
+        font-weight: 600;
         line-height: 1.2;
         margin-bottom: 5vh;
         margin-top: 0;
@@ -56,7 +56,7 @@
         line-height: 1.33;
         margin-bottom: 0;
         margin-top: 0;
-        width: 25vw;
+        width: 30vw;
         padding: 0;
         text-align: center;
         margin-bottom: 5vh;
@@ -85,7 +85,7 @@
     .getStartedButton:hover{
         background-color: var(--header-main-hover);
         color: var(--header-main);
-        border: 4px solid var(--header-main);
+        border: 5px solid var(--header-main);
         cursor: pointer;
     }
 
@@ -101,6 +101,25 @@
         margin: 0;
         padding: 0;
         z-index: 0;
+    }
+    @media screen and (max-width: 1600px){
+        .getStarted h1 {
+            font-size:4.5rem;
+            width: 40vw;
+            
+        }
+        .getStartedP{
+width: 40vw;
+        }
+     
+    }
+    @media screen and (max-width: 1200px){
+        .getStarted h1 {
+            font-size:4rem;
+            width:50vw;
+            
+        }
+     
     }
 
     @media screen and (max-width: 750px){
