--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,14 @@ code {
 
 :root {
 
- --header-main: #ffc8f3;
+ --header-main: #fcd4f1;
  --black-text: #242424;
- --main-blue: #33a7eb;
+ --main-blue: #53c1e2;
+ --matched-blue: # --main-blue: #44b4d6;
+ 
  --light-blue: #5fbcf1;
  --accent-blue:rgb(217, 234, 245);
- --accent-pink:rgb(242, 235, 245);
+ --accent-pink:#fae3f4;
   --background-offwhite: #fcfaf6;
  
 }
