--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -2,6 +2,7 @@
 .landing {
   height: 100vh;
   width: 100vw;
+  margin: 0;
   margin-top: -10vh;
   display: flex;
   flex-direction: row;
@@ -15,14 +16,40 @@
   background-position: center;
   background-repeat: no-repeat;
   z-index: 12;
+
 }
+
+.landingsection2container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0;
+  width: 100vw;
+height: 100vh;
+margin-top: 10vh;
+
+  z-index: 0;
+}
+
+/* .landingsection2container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  margin: 0;
+
+  z-index: 0;
+} */
 
 /* Landing Section 2 Styles */
 .landingSubOuter {
   width: 100vw;
   height: 130vh;
+  margin: 0;
   margin-top: -20vh;
-  background-color: var(--header-main);
+  background-color: var( --accent-pink);
   border-bottom-left-radius:5vh;
   border-bottom-right-radius: 5vh;
   flex-direction: column;
@@ -117,6 +144,12 @@
   object-fit: cover; /* Ensure the image covers the container */
 }
 
+/* Landing Section 2 Image Styles */
+.containerImg {
+border-radius:30px ;
+margin: 2rem;
+}
+
 /* Food Types Styles */
 .foodTypes {
   display: flex;
@@ -165,7 +198,7 @@
   align-items: flex-end;
 }
 
-.landing-title {
+.landingsubs {
   font-size: 2rem;
   margin-bottom: 10px;
 }
@@ -250,7 +283,7 @@ color: #ffffff;
   background-color: var(--main-blue); /* Change this to your desired button style */
   color: #fff;
   padding: 10px;
-  margin-left: -12.3vw;
+  margin-left: -12.36vw;
   margin-top: 0.6vh;
   font-size: 1.1rem;
   font-weight: 600;
@@ -265,24 +298,24 @@ color: #ffffff;
 .input-container button:hover {
   background-color: var(--background-offwhite);
   color: var(--main-blue);
-  border: 5px solid var(--main-blue);
+  border: 4px solid var(--main-blue);
   cursor: pointer;
 }
 
 /* Landing Info Heading Styles */
-.landingInfo h1 {
+.landingInfo h1, .landingInfo2 h1 {
   font-size: 3rem;
   margin: 0;
   padding: 0;
   color: var(--header-main);
   font-family: 'Roboto', sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   text-align: right;
   margin-bottom: 2vh;
 }
 
-.landingInfo h2 {
-  font-size: 1.1rem;
+.landingInfo h2, .landingInfo2 h2 {
+  font-size: 1rem;
   margin: 0;
   padding: 0;
   margin-bottom: 2vh;
@@ -292,9 +325,18 @@ color: #ffffff;
   color: var(--header-main);
 }
 
+.landingInfo2 h1{
+font-size: 3rem;
+}
+.landingInfo2 h1, .landingInfo2 h2 {
+  color: var(--main-blue);
+  text-align: left;
+  width: 25vw;
+}
+
 /* Landing Button Styles */
-.landingButton {
-  height: 10vh;
+.landingButton, .landingSubButton {
+  height: 8vh;
   width: 45%;
   margin: 0;
   display: flex;
@@ -308,37 +350,77 @@ color: #ffffff;
   border-radius: 17.4rem;
   border: 0;
 }
+.landingSubButton {
+  background-color: var(--main-blue);
+}
 
-.landingButton:hover {
+.landingButton:hover, .landingSubButton:hover {
   background-color: var(--header-main-hover);
   color: var(--header-main);
-  border: 5px solid var(--header-main);
+  border: 4px solid var(--header-main);
+  cursor: pointer;
+}
+.landingSubButton:hover {
+  background-color: var(--main-blue-hover);
+  color: var(--main-blue);
+  border: 4px solid var(--main-blue);
   cursor: pointer;
 }
 
 /* Media Queries */
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1500px) {
   .landingInfo h1 {
     text-align: right;
     font-size: 2.6rem;
     font-weight: 600;
     width: 40vw;
   }
+  .landingsection2container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    margin: 0;
+    margin-top: 10vh;
+    z-index: 0;
+  }
+
 
   .landingInfo h2 {
     text-align: right;
     font-size: 1.1rem;
     width: 40vw;
   }
+  
+  .landingInfo2 h2 {
+    text-align: center;
+    font-size: 1.1rem;
+    width: 60vw;
+    margin: 0;
+  }
+  .landingInfo2 h1 {
+    width: 40vw;
+    font-size: 2.6rem;
+    margin: 1rem;
+  }
+  .landingInfo2 {
+    width: 50vw;
+  }
 
   
-  .landingSubOuter4, .landingSub4Content, .landingSection4 {
+  .landingSubOuter4, .landingSubOuter, .landingSub4Content, .landingSection4 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: auto;
     width:100vw;
+  }
+  .landingInfo2 h1 {
+    width: 70vw;
+    font-size: 1.5rem;
+    font-weight: 500;
   }
   
   .landingSub4Title {
@@ -379,7 +461,10 @@ color: #ffffff;
    }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width:1000px) {
+  .landingInfo2 {
+    width: 90vw;
+  }
   .landing {
     background-size: cover;
     background-image: url(https://live.staticflickr.com/65535/53097601747_ad931ab6ce_h.jpg);
@@ -392,7 +477,13 @@ color: #ffffff;
     width: 100vw;
     height: 130vh;
   }
-
+.landingsection2container{
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  height: 100vh;
+}
   .landingInfo {
     position: absolute; /* Use absolute positioning to overlay the image */
     top: 40%;
@@ -422,7 +513,7 @@ color: #ffffff;
     height: 90vh;
   }
 
-  .landingButton {
+  .landingButton, .landingSubButton {
     height: 8vh;
     width: 60%;
     margin: 0;
@@ -430,7 +521,6 @@ color: #ffffff;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: var(--header-main);
     color: #fff;
     font-size: 1.2rem;
     font-weight: 600;
@@ -526,7 +616,7 @@ color: #ffffff;
     font-size: 1.2rem;
   }
 
-  .landingButton {
+  .landingButton, .landingSubButton {
     height: 8vh;
     width: 90%;
     margin: 0;
