--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -360,9 +360,9 @@
       font-size: 1.5rem;
         left:30%;
       }
-#profileicon{
+/* #profileicon{
   margin-right: 4vh;
-}
+} */
     }
  
 
