--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Cabin', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+}
+html {
+  max-width: 100vw;
 }
 
 code {
