--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -4,7 +4,7 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      width: 100vw;
+      max-width: 100vw;
       background-color: #e7e0bd;
       color: white;
     overflow-x: hidden;
