profile icon margin right

--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -272,6 +272,7 @@
   height: 5vh;
   justify-content: center;
   margin-top: 0.5vh;
+  margin-right: 4vw;
 }
     .button-hoverable:hover {
       cursor: pointer;
