--- a/src/pages/animate.css
+++ b/src/pages/animate.css
@@ -15,6 +15,10 @@
     .landingButton {
         animation-delay: 0.8s;
     }
+.containerImg {
+    animation-delay: 0.9s;
+}
+
 
     /* Sign Up */
 
