--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -185,7 +185,7 @@
       align-items: center;
       border-bottom-left-radius: 5vh;
       border-bottom-right-radius: 5vh;
-      background-color: var(--accent-pink);
+      background-color: var(--main-blue);
       top: 100%;
       left: 0;
       width: 100vw;
@@ -215,7 +215,7 @@
     
     .additionalSignInMenu a {
       text-decoration: none;
-      color: var(--main-blue);
+      color: var(--accent-pink);
     }
     
     .additionalSignInMenu a:hover {
@@ -342,7 +342,7 @@
     @media screen and (max-width: 1200px)
     {
       #profileicon {
-        height: 3.5vh;
+        height: 5vh;
       }
     button#SignUp{
       display: none;
