--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -75,6 +75,10 @@ margin-top: 10vh;
   height: 130vh;
   margin-top: -20vh;
   background-color: var(--light-blue);
+  background-image: url('https://images.pexels.com/photos/825949/pexels-photo-825949.jpeg');
+  background-size: cover;
+  background-position: 40% center;
+  background-repeat: no-repeat;
   border-bottom-left-radius: 5vh;
   border-bottom-right-radius:5vh;
   flex-direction: column;
@@ -295,11 +299,11 @@ color: #ffffff;
   color: #fff;
   padding: 10px;
   margin-left: -12.36vw;
-  margin-top: 0.6vh;
+  margin-top: 0.4vh;
   font-size: 1.1rem;
   font-weight: 600;
   width: 12vw;
-  height: 8.2vh;
+  height: 8vh;
   border: none;
   cursor: pointer;
   border-radius: 17.4rem;
@@ -557,7 +561,10 @@ font-size: 3rem;
     border: 0;
   }
 
-  
+  .landingSubOuter2 {
+    background-position: 45% center;
+
+  }
 
   .landingSubOuter4, .landingSubOuter, .landingSub4Content, .landingSection4 {
     display: flex;
@@ -566,8 +573,10 @@ font-size: 3rem;
     align-items: center;
     margin: 0;
     width:100vw;
+    height: 120vh;
     z-index: 0;
   }
+  
   
   .landingSub4Title {
     text-align: center;
@@ -593,11 +602,11 @@ font-size: 3rem;
   .input-container button {
     padding: 10px;
     margin-left: -15.6vw;
-    margin-top: 0.6vh;
+    margin-top: 0.5vh;
     margin-bottom: 0;
     font-size: 0.8rem;
     width: 15vw;
-    height: 6.7vh;
+    height: 6.3vh;
     border-radius: 17.4rem;
   }
    .tcs {
