--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -38,7 +38,7 @@ html,body
   margin: 0;
   width: 100vw;
 height: 100vh;
-margin-top: 10vh;
+margin-top: 20vh;
 
   z-index: 0;
 }
@@ -518,6 +518,7 @@ font-size: 3rem;
   align-items: center;
   justify-content: center;
   margin: 0;
+  margin-top: 25vh;
   height: 100vh;
 }
   .landingInfo {
@@ -577,7 +578,8 @@ font-size: 3rem;
     margin: 0;
     margin-top: -10vh;
     width:100vw;
-    height: 120vh;
+    height: 130vh;
+    padding-bottom: 5vh;
     z-index: 0;
   }
   
