--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -8,28 +8,35 @@
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  
+  height: 110vh;
+
 }
 
 .maindashboard {
   display: flex;
-  justify-content: center; /* Horizontally center the content */
-  align-items: flex-start; /* Vertically center the content */
-  height: 90vh; /* Adjust the height as needed */
-  width:80vw;
+  justify-content: center;
+  /* Horizontally center the content */
+  align-items: flex-start;
+  /* Vertically center the content */
+  height: 90vh;
+  /* Adjust the height as needed */
+  width: 80vw;
   margin: 0;
 }
 
 .dashboardleft {
-  text-align: center; /* Center the text inside dashboardleft */
+  text-align: center;
+  /* Center the text inside dashboardleft */
 }
-.dashboardright, .dashboardleft {
+
+.dashboardright,
+.dashboardleft {
   display: flex;
   flex: 1;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-margin-top: 15vh;
+  margin-top: 15vh;
   width: 50vw;
   height: 90vh;
 
@@ -40,8 +47,9 @@ margin-top: 15vh;
 .userDetails {
   text-align: left;
 
-  
+
 }
+
 .editButtons {
   display: flex;
   flex-direction: row;
@@ -56,6 +64,7 @@ margin-top: 15vh;
   margin: 0;
 
 }
+
 .dogContainer,
 .order-details p {
   margin: 0;
@@ -71,18 +80,20 @@ margin-top: 15vh;
 /* Style for dog and order button containers */
 .dog-button-container,
 .order-button-container {
-  flex: 0; /* Prevent button containers from growing */
-  margin-left: 10px; /* Add some space between data and buttons */
+  flex: 0;
+  /* Prevent button containers from growing */
+  margin-left: 10px;
+  /* Add some space between data and buttons */
 }
 
 .dashboardright button {
- width: 10vw;
+  width: 10vw;
   height: 50px;
   border-radius: 5px;
   border: none;
   background-color: transparent;
   color: #000;
-  font-size:0.6rem;
+  font-size: 0.6rem;
   font-weight: 300;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
@@ -102,9 +113,10 @@ margin-top: 15vh;
   font-weight: 700;
   border-radius: 17.4rem;
   border: 0;
-  
+
 }
-.dashboardleft button:hover{
+
+.dashboardleft button:hover {
   background-color: var(--header-main-hover);
   color: var(--header-main);
   border: 4px solid var(--header-main);
@@ -119,11 +131,13 @@ margin-top: 15vh;
   border: none;
 }
 
-.userpetbox, .userorderbox {
+.userpetbox,
+.userorderbox {
   min-width: 30vw;
 
 }
-.userinfobox{
+
+.userinfobox {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -132,7 +146,8 @@ margin-top: 15vh;
   width: 100vw;
 }
 
-.dog-overlay, .order-overlay {
+.dog-overlay,
+.order-overlay {
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -147,7 +162,8 @@ margin-top: 15vh;
   background-color: #f5f5f5;
 }
 
-.dog-overlay button, .order-overlay button {
+.dog-overlay button,
+.order-overlay button {
   height: 7vh;
   width: 10vw;
   margin: 0.5rem;
@@ -161,7 +177,9 @@ margin-top: 15vh;
   border-radius: 17.4rem;
   border: 0;
 }
-.dog-overlay button:hover, .order-overlay button:hover {
+
+.dog-overlay button:hover,
+.order-overlay button:hover {
   background-color: var(--header-main-hover);
   color: var(--header-main);
   border: 4px solid var(--header-main);
@@ -169,7 +187,7 @@ margin-top: 15vh;
 }
 
 .dogimg img {
-  width:5vw;
+  width: 5vw;
   height: auto;
   margin: 1rem;
   object-fit: cover;
@@ -179,7 +197,7 @@ margin-top: 15vh;
 
 .dogimg {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
@@ -188,19 +206,19 @@ margin-top: 15vh;
 @media screen and (max-width: 750px) {
   .dashboardright button {
     width: 15vw;
-     height: 50px;
+    height: 50px;
 
-   }
-   .maindashboard {
-    
-   }
+  }
 
-   .editinfo  {
-      width: 70vw;
-      height: 3vh;
-      font-size: 0.9rem;
-   }
-   .userinfobox{
+  .maindashboard {}
+
+  .editinfo {
+    width: 70vw;
+    height: 3vh;
+    font-size: 0.9rem;
+  }
+
+  .userinfobox {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -209,104 +227,111 @@ margin-top: 15vh;
     margin-top: 10vh;
 
     width: 80vw;
-    height:100vh;
+    height: 100vh;
   }
-   
-   .dashboardleft button {
-     height: 7vh;
-     width: 25vw;
-   
 
-   }
-   .maindashboard {
+  .dashboardleft button {
+    height: 7vh;
+    width: 25vw;
+
+
+  }
+
+  .maindashboard {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100vw;
     margin-top: 10vh;
 
-   }
-    .dashboardleft {
-      margin-top: 50vh;
-      height: 100vh;
-      width: 100vw;
-    }
-    .dashboardright {
-      margin-top: 20vh;
-      width: 100vw;
-    }
-    .dogContainer {
-      width: 30vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin: auto;
-      
-    }
-
-    .dogimg img {
-      height: 15vh;
-      width: auto;
-      
-    }
-    .userinfodetails, .useraddressdetails {
-      width: 90vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      line-height: 1;
-
-
-    }
-    .userpetbox {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      
-    }
-    .userDetails {
-      width: 90vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-    }
-    .dashboardright {
-      margin-top: 0;
-    }
-    .userinfo {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-
-    }
-    .userinfobox {
-   
-      width: 100vw;
-      height: 100vh;
-    }
   }
 
-  @media screen and (max-width:450px) {
-    .dashboardright button {
-      width: 20vw;
-       height: 50px;
-  
-     }
-     
-     .dashboardleft button {
-       height: 7vh;
-       width: 20vw;
-  
-       
-     }
+  .dashboardleft {
+    margin-top: 50vh;
+    height: 100vh;
+    width: 100vw;
+  }
 
-    }
+  .dashboardright {
+    margin-top: 20vh;
+    width: 100vw;
+  }
+
+  .dogContainer {
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+
+  }
+
+  .dogimg img {
+    height: 15vh;
+    width: auto;
+
+  }
+
+  .userinfodetails,
+  .useraddressdetails {
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    line-height: 1;
 
 
+  }
 
-    
+  .userpetbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+  }
+
+  .userDetails {
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .dashboardright {
+    margin-top: 0;
+  }
+
+  .userinfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+  }
+
+  .userinfobox {
+
+    width: 100vw;
+    height: 100vh;
+  }
+}
+
+@media screen and (max-width:450px) {
+  .dashboardright button {
+    width: 20vw;
+    height: 50px;
+
+  }
+
+  .dashboardleft button {
+    height: 7vh;
+    width: 20vw;
+
+
+  }
+
+}
