--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -2,7 +2,7 @@
 .survey {
     background-color: var(--background-offwhite);
     width: 100vw;
-    height: 110vh;
+    min-height: 150vh;
     margin: auto;
     margin-top: -10vh;
     display: flex;
@@ -14,8 +14,7 @@
   .formTitle {
     font-size: 2.5rem;
     font-weight: 600;
-    margin-bottom:  5vh;
-    margin-top: 15vh;
+    margin: 50vh 0 3vh;
     width: 100vw;
     text-align: center;
   }
@@ -27,8 +26,11 @@
     width: 60vw;
     height: 70vh;
     margin: auto;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
     z-index: 1;
   }
+  
 .surveyFormNum {
     position: absolute;
     top: -10vh;
@@ -45,9 +47,10 @@
     justify-content: space-between;
   }
   .surveyButton  {
-    background-color: var(--header-main); /* Change this to your desired button style */
+    background-color: var(--header-main); 
     color: #fff;
     padding: 10px;
+    margin: 1rem;
     margin-top: 5rem;
     font-size: 1.1rem;
     font-weight:600;
@@ -66,7 +69,7 @@
     background-color: var(--main-blue); /* Change this to your desired button style */
     color: #fff;
     padding: 10px;
-    margin: 10px 10px;
+    margin-top: 5rem;
     font-size: 1.1rem;
     font-weight:600;
     width: 15vw;
@@ -90,6 +93,7 @@
     width: 100vw;
     height: 50vh;
     margin: auto;
+    margin-top: 25vh;
   }
   
   /* Form Styles */
@@ -205,6 +209,20 @@
     flex-direction: row;
     align-items: center;
   }
+
+  .surveyFormSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60vw;
+    margin: 120px auto 3rem;  }
+
+  #delivery_instructions {
+    margin-bottom: 5rem;
+  }
+
+
   
   /* Responsive Styles */
   @media screen and (max-width: 1300px) {
