--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -26,7 +26,7 @@
     width: 60vw;
     height: 70vh;
     margin: auto;
-    margin-top: 8rem;
+    margin-top: 18rem;
     margin-bottom: 8rem;
     z-index: 1;
   }
@@ -69,6 +69,7 @@
     background-color: var(--main-blue); /* Change this to your desired button style */
     color: #fff;
     padding: 10px;
+    margin: 1rem;
     margin-top: 5rem;
     font-size: 1.1rem;
     font-weight:600;
