landing page images

--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -112,6 +112,13 @@ margin-top: 20vh;
   align-items: center;
   z-index: -1;
 }
+.keepscrollimg, .lookinat{
+  position: relative;
+  top:36vh;
+  width:25vw;
+  margin-top: 2vh;
+  z-index: 100;
+}
 
 .landingSubOuter4 {
   width: 100vw;
@@ -500,7 +507,14 @@ font-size: 3rem;
   
   }
 
-  
+  .keepscrollimg, .lookinat{
+    position: relative;
+    top:-10vh;
+    left: 0vw;
+    width:100vw;
+    margin-top: 2vh;
+    z-index: 100;
+  }
   .landing {
     background-size: cover;
     background-image: url(https://live.staticflickr.com/65535/53097601747_ad931ab6ce_h.jpg);
@@ -662,20 +676,34 @@ font-size: 3rem;
 
   .landingInfo h1 {
     text-align: left;
-    font-size: 2.7rem;
+    font-size: 2.4rem;
     font-weight: 400;
     width: 80vw;
     margin-bottom: 2vh;
   }
-
-  
+  .keepscrollimg {
+    position: relative;
+    top:0vh;
+    left: 0vw;
+    width:100vw;
+    margin-top: 2vh;
+    z-index: 100;
+  }
+  .lookinat{
+    position: relative;
+    top:45vh;
+    left: 30vw;
+    width:80vw;
+    margin-top: 2vh;
+    z-index: 100;
+  }
   .landingInfo h2 {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .landingButton, .landingSubButton {
     height: 8vh;
-    width: 90%;
+    width: 80%;
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -687,7 +715,7 @@ font-size: 3rem;
     border-radius: 17.4rem;
     border: 0;
   }
-.landingSubOuter4, .landingSub4Content, .landingSection4 {
+.landingSubOuter4, .landingSection4 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -695,7 +723,10 @@ font-size: 3rem;
   margin: auto;
   width:100vw;
   margin-top: -10vh;
-  min-height: 100vh;
+ height:70vh;
+}
+.landingSub4Content {
+  margin-top: 10rem;
 }
 
 .landingSub4Title {
@@ -715,7 +746,7 @@ font-size: 3rem;
 
 .input-container input[type="text"] {
   width: 70vw;
-  height: 5.5vh;
+  height: 5vh;
   border-radius: 35.4rem;
   font-size: 1rem;
   margin-top: 1rem;
@@ -723,11 +754,11 @@ font-size: 3rem;
 .input-container button {
   padding: 10px;
   margin-left: -19vw;
-  margin-top: 0.6vh;
+  margin-top: 0.8vh;
   margin-bottom: 0;
   font-size: 0.8rem;
   width: 18vw;
-  height: 6.4vh;
+  height: 6.2vh;
   border-radius: 17.4rem;
 }
  .tcs {
