landing and get started floating images

--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,9 @@ code {
  --header-main: #fcd4f1;
  --black-text: #242424;
  --main-blue: #53c1e2;
- --matched-blue: # --main-blue: #44b4d6;
  
  --light-blue: #5fbcf1;
- --accent-blue:rgb(217, 234, 245);
+ --accent-blue:#d9eaf5;
  --accent-pink:#fae3f4;
   --background-offwhite: #fcfaf6;
  
