--- a/src/pages/animate.css
+++ b/src/pages/animate.css
@@ -76,6 +76,9 @@
       .infoBox {
         animation-delay: 0.9s;
       }
+      .bkgrndFloatImg {
+        animation-delay: 0.9s;
+      }
 
 
       /* Survey */
