--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -27,6 +27,33 @@
         margin-right: 2vw;
         margin-bottom: 4vh;
     }
+
+    .exclaimimg { 
+        position: absolute;
+        top: 5rem;
+        height: 10rem;
+        width:10rem;
+        margin: 0;
+        padding: 0;
+        z-index: 2;
+        filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
+
+    }
+
+    .waveimg {
+        position: absolute;
+        bottom: 50;
+        left: 50;
+        height: 40rem;
+        width:60rem;
+        margin: 0;
+        padding: 0;
+        z-index: 0;
+        filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
+        
+    }
+    
+    
     .infoBox p {
         color: #242424;
         font-size: 0.8rem;
@@ -47,6 +74,7 @@
         padding: 0;
         text-align: center;
         width:30vw;
+        z-index: 1;
 
     }
     .getStartedP{
