--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -216,3 +216,47 @@ display: none;
     
 }
     }
+
+ 
+    @media screen and (max-width: 375px){
+
+        .getStarted h1 {
+            font-size:3rem;
+            width:80vw;
+            
+        }
+        .exclaimimg { 
+          display: none;
+        }
+        .waveimg {
+            height: 25rem;
+            width:30rem;
+            margin: 0;
+            padding: 0;
+            z-index: 0;
+            filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
+            
+        }
+        .infoBox{
+             width: 60vw;
+         }
+        .infoBox p {
+            padding: 10px;
+            font-size: 0.7rem;
+        }
+        .getStarted h1 {
+            font-size:3rem;
+            font-weight: 600;
+            margin-bottom:  5vh;
+            margin-top: 20vh;
+            width: 80vw;
+            line-height: 1.2;
+        }
+        .getStarted p {
+            font-size: 1rem;
+            width: 70%;
+            width: 80vw;
+        }
+    }
+
+
