--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -44,7 +44,8 @@
         position: absolute;
         bottom: 50;
         left: 50;
-        height: 40rem;
+        height: 35rem;
+  
         width:60rem;
         margin: 0;
         padding: 0;
@@ -259,4 +260,20 @@ display: none;
         }
     }
 
+
+    @media screen and (max-width: 320px){
+
+        .infoBox p {
+            padding: 10px;
+            font-size: 0.7rem;
+        }
+        .getStarted h1 {
+            font-size:2.8rem;
+           
+        }
+        .getStarted p {
+            font-size: 0.9rem;
+           
+        }
+    }
 
