--- a/src/pages/animate.css
+++ b/src/pages/animate.css
@@ -79,7 +79,9 @@
       .bkgrndFloatImg {
         animation-delay: 0.9s;
       }
-
+.waveimg {
+  animation-delay: 1.1s;
+}
 
       /* Survey */
       .surveyContent {
@@ -92,6 +94,9 @@
         animation-delay: 0.8s;
       }
   /* FAQ */
+  .faqtitle {
+    animation-delay: 0.6s;
+  }
   .pagetitle {
     animation-delay: 0.6s;
   }
@@ -101,6 +106,12 @@
   .faq-subject {
     animation-delay: 0.8s;
   }
+  .faqfloat {
+    animation-delay: 0.9s;
+  }
+
+
+
   @keyframes pop-in {
     0% {
       opacity: 0;
