--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@ body {
   font-family: 'Cabin', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
+  max-width: 100%;
+  height: auto;
   
 }
 html {
