--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -28,8 +28,14 @@ html,body
 
 }
 .landingContainer {
-  max-width: 100vw;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
 }
+
 .landingsection2container {
   display: flex;
   flex-direction: row;
@@ -38,7 +44,7 @@ html,body
   margin: 0;
   width: 100vw;
 height: 100vh;
-margin-top: 20vh;
+margin-top: 10vh;
 
   z-index: 0;
 }
@@ -110,7 +116,7 @@ margin-top: 20vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: -1;
+  z-index: 100;
 }
 .keepscrollimg{
   position: relative;
@@ -133,24 +139,25 @@ margin-top: 20vh;
 }
 .bowlimg{
   position: relative; /* Use fixed positioning to keep it in a fixed position on the screen */
-  top:-15vh; /* Adjust the top position to place it vertically */
-  left: -40%; /* Adjust the left position to place it horizontally */
+  top:20%; /* Adjust the top position to place it vertically */
+  left: -35%; /* Adjust the left position to place it horizontally */
   margin: 0;
   padding: 0;
-  height: 20vh;
+  height: 15vh;
   transform: translate(-50%, -50%); /* Center the image both vertically and horizontally */
+  rotate: 10deg;
   z-index: 10; 
   filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
 
 }
 .arrowimg {
   position: relative; /* Use fixed positioning to keep it in a fixed position on the screen */
-  top:25vh; /* Adjust the top position to place it vertically */
-  left: -5vh; /* Adjust the left position to place it horizontally */
+  top:2vh; /* Adjust the top position to place it vertically */
+  left: -2vh; /* Adjust the left position to place it horizontally */
   margin: 0;
   rotate: -20deg;
   padding: 0;
-  height: 20vh;
+  height: 15vh;
   transform: translate(-50%, -50%); /* Center the image both vertically and horizontally */
   z-index: 100; 
   filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
@@ -168,7 +175,7 @@ margin-top: 20vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 0;
+  z-index: 100;
 }
 
 /* Common Styles */
@@ -195,7 +202,8 @@ margin-top: 20vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 0;
+  z-index: 100;
+  width: 100vw;
 }
 
 /* Landing Section 1 Image Styles */
@@ -441,9 +449,9 @@ font-size: 3rem;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 80vw;
+    width: 50vw;
     margin: 0;
-    margin-top: 10vh;
+    margin-top: 5vh;
     z-index: 0;
   }
 
@@ -465,9 +473,7 @@ font-size: 3rem;
     width: 20vw;
     margin: 0;
   } 
-  .landingPara {
-    width: 20vw;
-  }
+ 
   .landingInfo2 {
     width: 50vw;
   } */
@@ -483,10 +489,10 @@ font-size: 3rem;
     width:100vw;
   }
   .landingInfo2 h1 {
-    width: 40vw;
+    width: 30vw;
     font-size: 2.5rem;
     font-weight: 500;
-    margin-right: 1rem;
+    margin-right:5rem;
   }
   
   .landingSub4Title {
@@ -527,6 +533,19 @@ font-size: 3rem;
    }
 }
 
+@media screen and (max-width:1024px ) {
+  .landingInfo2 h1 {
+    width: 35vw;
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+  }
+  .containerImg {
+    width:50vw;
+  }
+}
 @media screen and (max-width:768px ) {
   .landingInfo2 {
     width: 70vw;
@@ -543,7 +562,10 @@ font-size: 3rem;
     width: 70vw;
   
   }
-
+  .containerImg {
+    width:70vw;
+    margin-bottom: 2rem;
+  }
   .keepscrollimg{
     position: relative;
     top:-10vh;
@@ -554,9 +576,9 @@ font-size: 3rem;
   }
   .lookinat {
     position: relative;
-    top: 40vh;
-    left: 40vw;
-    width:60vw;
+    top: 60vh;
+    left: 60vw;
+    width:40vw;
     margin-top: 2vh;
     z-index: 100;
   }
@@ -577,8 +599,8 @@ font-size: 3rem;
   align-items: center;
   justify-content: center;
   margin: 0;
-  margin-top: 25vh;
-  height: 100vh;
+  margin-top:20vh;
+  height: 130vh;
 }
   .landingInfo {
     position: absolute; /* Use absolute positioning to overlay the image */
@@ -679,13 +701,7 @@ font-size: 3rem;
     margin-left: 15vw;
     font-size: 0.8rem;
    }
-   .containerImg {
-    border-radius: 30px;
-    margin: 0;
-    width: 100%;
-    margin-bottom: 2rem;
-    margin-top: 4rem;
-  }
+
   .landingSubOuter2 {
     background-size: cover;
     background-position: 50% 20% center;
@@ -694,30 +710,9 @@ font-size: 3rem;
 }
 
 @media screen and (max-width: 430px) {
-  /* .landing {
-    background-size: cover;
-    background-image: url(https://live.staticflickr.com/65535/53097601747_ad931ab6ce_h.jpg);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-repeat: no-repeat;
-    background-position: right middle;
-    align-items: center;
-    width: 100vw;
-    height: 130vh;
-  } */
-
-  /* .landingInfo {
-    position: absolute;
-    top: 40%;
-    left: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 100%;
-    height: 70vh;
-  } */
+    html, body {
+    overflow-x: hidden;
+  }
 
   .landingInfo h1 {
     text-align: left;
@@ -726,27 +721,31 @@ font-size: 3rem;
     width: 80vw;
     margin-bottom: 2vh;
   }
+  .containerImg {
+    margin-top: 5vh;
+  }
   .keepscrollimg {
-    position: relative;
-    top:0vh;
+    position: absolute;
+    top:30vh;
     left: 0vw;
     width:100vw;
     margin-top: 2vh;
     z-index: 100;
   }
   .lookinat{
-    position: relative;
+  display: flex;
     top: 45vh;
     left: 10vw;
-    width:100vw;
+    width:80vw;
     margin-top: 2vh;
     z-index: 100;
-  }
+
+  } 
   .landingInfo h2 {
     font-size: 1rem;
   }
   .landingInfo2 h1 {
-    width: 80vw;
+    width: 70vw;
     font-size: 1.8rem;
   
   }
@@ -786,7 +785,7 @@ font-size: 3rem;
 .landingSub4Para {
   text-align: center;
   font-size: 1.2rem;
-  width: 90vw;
+  width: 80vw;
   margin-bottom: 1rem;
   color: var(--background-offwhite);
   text-align: center;
@@ -815,6 +814,12 @@ font-size: 3rem;
   margin-left: 15vw;
   font-size: 0.8rem;
  }
+ .bowlimg{
+  top:-5vh;
+  left: 5vw;
+  width: 50vw;
+  display: none;
+}
 }
 
 @media screen and (max-width: 320px) {
@@ -836,15 +841,19 @@ font-size: 3rem;
   }
   .lookinat{
     position: relative;
-    top: 45vh;
+    top: 60vh;
     left: -5vw;
-    width:120vw;
+    width:80vw;
     margin-top: 2vh;
     z-index: 100;
   }
   .landingInfo h2 {
     font-size: 1rem;
   }
+  .arrowimg {
+    display: none;
+  }
+
 
   .landingButton, .landingSubButton {
     height: 8vh;
