--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -4,7 +4,9 @@
       max-width: 100vw;
       background-color: #e7e0bd;
       color: white;
-    width: 100vw;
+      margin: auto;
+      padding: 0;
+max-width: 100%;
     background-color: black;
     z-index: 101;
  
