--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -5,7 +5,7 @@
         background-color: transparent;
         z-index: 100;
         transition: top 0.3s ease-in-out;
-        width: 100vw;
+        width: 100%;
       }
       .outerNav {
         width: 100vw;
