contact page css

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ code {
  --black-text: #242424;
  --main-blue: #53c1e2;
  
- --light-blue: #5fbcf1;
+ --light-blue: #79d5f1;
  --accent-blue:#d9eaf5;
  --accent-pink:#fae3f4;
   --background-offwhite: #fcfaf6;
