--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -8,13 +8,16 @@
     padding: 0;
     margin: 0;
     margin-top: -20vh;
-    background-color: var(--main-blue);
+    background-color: var(--light-blue);
+    max-height: auto;
    
 }
 #contactForm h1 {
 font-size: 4.5rem;
 width: 35vw;
 text-align: center;
+z-index: 1;
+color: var(--black-text);
   
 }
 
@@ -22,7 +25,7 @@ text-align: center;
     font-size: 1.5rem;
     width: 35vw;
     text-align: center;
-    margin-bottom: 5vh;
+    z-index: 1;
 
 }
 #contactForm {
@@ -35,10 +38,35 @@ text-align: center;
   
     color: var(--header-text);
 }
-
+.barkimg {
+    position: fixed;
+    height: 25rem;
+    width:30rem;
+    bottom:0;
+    left: 5rem;
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+    filter: invert(97%) sepia(23%) saturate(6420%) hue-rotate(191deg) brightness(0%) contrast(96%);
+    rotate: -2deg;
+    opacity: 0.8;
+}
+.starsimg {
+    position: fixed;
+    height: 25rem;
+    width:15rem;
+    bottom:0;
+    right: 5rem;
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+    filter: invert(97%) sepia(23%) saturate(6420%) hue-rotate(191deg) brightness(113%) contrast(96%);
+    rotate: -2deg;
+    opacity: 0.8;
+}
 .conactcontent {
     height:100vh;
-    width: 100%;
+    width: 100vw;
     margin-top: 15vh;
     display: flex;
     flex-direction: column;
@@ -81,6 +109,20 @@ text-align: center;
     background-color: var(--background-offwhite);
    
 }
+        .waveimgcontact {
+            position: absolute;
+            height:10vh;
+            width:4vw;
+            scale:7;
+            top:20rem;
+            margin: 0;
+            padding: 0;
+            z-index: 0;
+            filter: invert(97%) sepia(23%) saturate(6420%) hue-rotate(191deg) brightness(113%) contrast(96%);
+            rotate: -2deg;
+            opacity: 0.8;
+            
+        }
 
 .contactformgroupbutton button {
     height: 10vh;
@@ -88,8 +130,8 @@ text-align: center;
     border-radius: 3.4rem;
     font-size: 1.5rem;
     font-weight: 600;
-    background-color: var(--header-main);
-    color: var(--background-offwhite);
+    background-color: var(--accent-pink);
+    color: var(--main-blue);
     border: none;
     margin-top: 2vh;
     margin-bottom: 2vh;
@@ -219,6 +261,7 @@ input:focus, textarea:focus, select:focus{
         #contactForm h1 {
             font-size: 2.6rem;
             width: 80vw;
+            margin-top: 0;
     
               
             }
