--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -47,7 +47,7 @@
         left: 50;
         height: 35rem;
         rotate: -2deg;
-        width:60rem;
+        width:30rem;
         margin: 0;
         padding: 0;
         z-index: 0;
@@ -107,9 +107,9 @@
         background-color: var(--header-main);
         color: #ffffff;
         font-size: 1.2rem;
+        border: 4px solid var(--header-main);
         font-weight: 700;
         border-radius: 17.4rem;
-        border: 0;
         
     }
     .getStartedButton:hover{
