--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,9 +1,12 @@
+
+
 .contactcontainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 150vh;
+
     width: 100vw;
     padding: 0;
     margin: 0;
@@ -15,6 +18,8 @@
 #contactForm h1 {
 font-size: 4.5rem;
 width: 35vw;
+padding: 0;
+margin: 0;
 text-align: center;
 z-index: 1;
 color: var(--black-text);
@@ -26,6 +31,8 @@ color: var(--black-text);
     width: 35vw;
     text-align: center;
     z-index: 1;
+    padding: 0;
+    margin-top: 4rem;
 
 }
 #contactForm {
@@ -34,8 +41,8 @@ color: var(--black-text);
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
-  
+    width: 100%;
+    padding: 0;
     color: var(--header-text);
 }
 .barkimg {
@@ -66,12 +73,15 @@ color: var(--black-text);
 }
 .conactcontent {
     height:100vh;
-    width: 100vw;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     margin-top: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 
 }
 .contactformgroup {
@@ -81,11 +91,11 @@ color: var(--black-text);
     align-items: center;
     margin: 0;
     padding: 0;
-    width: 100vw;
+    width: 100%;
    
 }
 .contactformgroup input {
-    height:4vh;
+    height:2vh;
     width: 35vw;
     border-radius: 3.4rem;
     font-size: 1.5rem;
@@ -109,12 +119,12 @@ color: var(--black-text);
     background-color: var(--background-offwhite);
    
 }
-        .waveimgcontact {
+.waveimgcontact {
             position: absolute;
             height:10vh;
             width:4vw;
             scale:7;
-            top:20rem;
+            top:16.5rem;
             margin: 0;
             padding: 0;
             z-index: 0;
@@ -148,7 +158,7 @@ color: var(--black-text);
     align-items: flex-end;
     margin: 0;
     padding: 0;
-    width: 35vw;
+    width: 40vw;
    
 }
 .contacttextarea.focus {
@@ -157,7 +167,7 @@ color: var(--black-text);
 
 input:focus, textarea:focus, select:focus{
     outline: 4px solid var(--header-main);
-}
+}/* 
 @media screen and (max-width: 1500px) {
 
     #contactForm {
@@ -205,11 +215,6 @@ input:focus, textarea:focus, select:focus{
 }
 @media screen and (max-width: 750px) {
 
-    /* #contactForm {
-    
-        width: 90%;
-
-    } */
     #contactForm h1 {
         font-size: 3.5rem;
         width: 60vw;
@@ -250,7 +255,9 @@ input:focus, textarea:focus, select:focus{
 
 @media screen and (max-width: 375px) {
 
-
+    html, body {
+        width: 100%;
+       }
 
         #contactForm p {
             width: 80vw;
@@ -268,9 +275,10 @@ input:focus, textarea:focus, select:focus{
             
             #contactForm p {
                 font-size: 1rem;
-                width: 70vw;
+                width: 80vw;
                 text-align: center;
-                margin-bottom: 5vh;
+                margin-top: 5vh;
+                margin-bottom: 2vh;
             
             }
     
@@ -296,4 +304,24 @@ input:focus, textarea:focus, select:focus{
     .contactformgroupbutton {
         width: 75vw;
     }
-}
+    .starsimg {
+        position: absolute;
+        height: 5rem;
+        width:5rem;
+        top:10vh;
+        right: 5rem;
+        margin: 0;
+        padding: 0;
+        z-index: 0;
+        filter: invert(97%) sepia(23%) saturate(6420%) hue-rotate(191deg) brightness(113%) contrast(96%);
+        rotate: -2deg;
+        opacity: 0.8;
+    }
+    .waveimgcontact {
+        position: absolute;
+        height:10vh;
+        width:12vw;
+        top:16rem;
+
+    }
+} */
