--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -4,6 +4,7 @@
   height: 100vh;
  width: 100%;
   margin: 0;
+  padding: 0;
   margin-top: -10vh;
   display: flex;
   flex-direction: row;
@@ -58,7 +59,7 @@ margin-top: 10vh;
   width: 100%;
   height: 130vh;
   margin: 0;
-  margin-top: -20vh;
+  margin-top: -10vh;
   background-color: var( --accent-pink);
   border-bottom-left-radius:5vh;
   border-bottom-right-radius: 5vh;
@@ -130,10 +131,10 @@ margin-top: 10vh;
   filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
 
 }
-.bowlimg{
-  position: relative; /* Use fixed positioning to keep it in a fixed position on the screen */
-  top:20%; /* Adjust the top position to place it vertically */
-  left: -35%; /* Adjust the left position to place it horizontally */
+.starsimglanding{
+  position: absolute; /* Use fixed positioning to keep it in a fixed position on the screen */
+  bottom: -100%; /* Adjust the top position to place it vertically */
+  left:5%; /* Adjust the left position to place it horizontally */
   margin: 0;
   padding: 0;
   height: 15vh;
@@ -584,7 +585,7 @@ font-size: 3rem;
     background-repeat: no-repeat;
     background-position: right middle;
     align-items: center;
-    width: 100%;
+    max-width: 100vw;
     height: 130vh;
   }
 .landingsection2container{
@@ -723,7 +724,7 @@ font-size: 3rem;
   }
   .keepscrollimg {
     position: absolute;
-    top:30vh;
+    top:50vh;
     left: 0vw;
     width:100vw;
     margin-top: 2vh;
@@ -858,9 +859,9 @@ font-size: 3rem;
   }
   .lookinat{
     position: relative;
-    top: 60vh;
-    left: -5vw;
-    width:80vw;
+    top: 50vh;
+    left:50vw;
+    width:45vw;
     margin-top: 2vh;
     z-index: 100;
   }
@@ -943,4 +944,9 @@ font-size: 3rem;
   margin-left: 15vw;
   font-size: 0.8rem;
  }
+
+ .bowlimg{
+  top: 83%; /* Adjust the top position to place it vertically */
+  right:-30%; /* Adjust the left position to place it horizontally */
+}
 }
